# flutter_rust_bridge_tutorials

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_tutorials/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated_api.dart  bridge_generated_counter.dart  bridge_generated_repo_info.dart  bridge_generated_ticker.dart  main.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.rs  bridge_generated_api.rs  bridge_generated_counter.rs  bridge_generated_repo_info.rs  bridge_generated_ticker.rs  counter.rs  lib.rs  repo_info.rs  ticker.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
