[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1"
anyhow = { version = "1.0.57", features = ["backtrace"] }
serde = "1"
serde_json = "1"
serde_derive = "1"