[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1"
anyhow = { version = "1.0.57" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
# tokio = { version = "1.14.0", features = ["rt", "macros"] }
native-tls = "0.2"
openssl-sys = { version = "0.9.74", features = ["vendored"] }
rand = "0.8.5"
# install libssl-dev package on ubuntu
#   For example, `libssl-dev` on Ubuntu or `openssl-devel` on Fedora.
